objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>